--- a/src/main/webapp/kadaiSearch.html
+++ b/src/main/webapp/kadaiSearch.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>SampleSearch</title>
+<title>キーワード</title>
 </head>
 <body>
 	<form method="get" action="search">
