--- a/src/main/webapp/kadaiInsert.html
+++ b/src/main/webapp/kadaiInsert.html
@@ -1,8 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>データの追加</title>
+	<style type="text/css">
+		html, body {
+			height: 100%;
+		}
+		body {
+			background-color: #EAFDFC;
+			height: 100%;
+			text-align: center;
+    		top: 0px;
+    		left:500px;
+    		right: 500px;
+		}
+		table {
+			margin-left: auto;
+			margin-right: auto;
+			border-collapse: collapse;
+			background-color: white;
+			border: solid 2px #0D4C92;
+		}
+		table th, table td {
+			border: dashed 1px #0D4C92;
+		}
+		th, td {
+			padding: 30px;
+		}
+		.formarea {
+		text-align: center;
+		}
+		.buttonarea {
+			margin-top: 20px;
+		}
+	</style>
 </head>
 <body>
 	<h1>データの追加</h1>
