--- a/src/main/webapp/kadaiInsert.html
+++ b/src/main/webapp/kadaiInsert.html
@@ -5,11 +5,13 @@
 	<title>データの追加</title>
 	<style type="text/css">
 		html, body {
-			height: 100%;
+			min-height: 100%;
 		}
 		body {
-			background-color: #EAFDFC;
 			height: 100%;
+			background-color: #CDFCF6;
+			background-position: center center;
+			height: 100vh;
 			text-align: center;
     		top: 0px;
     		left:500px;
@@ -28,8 +30,11 @@
 		th, td {
 			padding: 30px;
 		}
+		form {
+			
+		}
 		.formarea {
-		text-align: center;
+			text-align: center;
 		}
 		.buttonarea {
 			margin-top: 20px;
